--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,7 +1,3 @@
-.home{
-    height: 100vh;
-}
-
 .fixedposition{
     width: 100%;
     position: fixed;
@@ -68,7 +64,7 @@
     background-color: rgb(0, 0, 122);
 }
 .intro{
-    margin-top: 15rem;
+    margin: 15rem 0;
     text-align: center;
 }
 
@@ -196,11 +192,6 @@ button{
     background-color: rgb(0, 178, 233);
     margin-bottom: 20px;
     border-color: deepskyblue;
-}
-
-
-.projects{
-    padding-top: 60px;
 }
 
 .desc{
